--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -54,7 +54,7 @@
             </p>
         </div>
         {{#if actividadesFuturas}}
-        <div data-1500="opacity:0" data-1900="opacity:1"
+        <div style="opacity:0" data-1500="opacity:0" data-1900="opacity:1"
                 data-2200="opacity:1"
              data-2600="opacity:0" >
         <div style="position:fixed; width:100%;margin-top:1700px;margin-left:0px;margin-right:0px;right:0px;height:120px;padding-right:70px;padding-left: 70px">
