--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -54,8 +54,8 @@
             </p>
         </div>
         {{#if actividadesFuturas}}
-        <div data-1500="opacity:0" data-1900="opacity:1" data-2200="opacity:1" data-2600="opacity:0" >
-        <div style="position:fixed; width:100%;margin-top:1700px;margin-left:0px;margin-right:0px;right:0px;height:120px;padding-right:70px;padding-left: 70px">
+        <div  >
+        <div data-1500="opacity:0" data-1900="opacity:1" data-2200="opacity:1" data-2600="opacity:0" style="position:fixed; width:100%;margin-top:1700px;margin-left:0px;margin-right:0px;right:0px;height:120px;padding-right:70px;padding-left: 70px">
             <div style="position:relative; width:100%;height:120px;background-color:#1d2e39">
                 <div id="myCarousel" class="carousel slide" data-ride="carousel" style="height:120px">
                     <div class="carousel-inner">
