--- a/imports/ui/users/archivo/actividadesArchivo.html
+++ b/imports/ui/users/archivo/actividadesArchivo.html
@@ -2,7 +2,7 @@
     <div style="background-color:#2d3e54;min-width:100wh;min-height:100vh;padding:10px">
         <div class="titulo" style="width:974px;margin:auto;padding:25px;background-color:#1d2e39;text-align:center">
             <span style=" font-family:'Montserrat';font-weight: 700;font-size: 30px;line-height:30px;font-style: normal; color:white;">
-                Archivo de actividades
+                ARCHIVO DE ACTIVIDADES
             </span>
         </div>
         <!--<div class="list-personas" style="margin-top:25px">-->
@@ -27,9 +27,13 @@
         <!--</div>-->
         <div style="width:900px;margin:auto">
             <div style="margin-top:20px;padding:10px;height:55px;width:100%;background-color:#1d2e39;">
-                <input class="form-control" style="width:30%;height:35px;display:inline" placeholder="Buscar">
+                <input class="search-actividad form-control" style="width:30%;height:35px;display:inline" placeholder="Buscar">
                 <button class="btn btn-primary" style="margin-left:5px;height:35px;padding:4px 12px;background-color:#313a77;border-color:#313a77"><i class="glyphicon glyphicon-search" style="margin-right:3px"></i>Buscar</button>
-                <span class="" style="margin-top:10px;float:right;font-family:'Montserrat';font-weight: 700;font-size: 18px;line-height:15px;font-style: normal; color:white;">{{#if prev}}<a class="prev-page" style="cursor:pointer"><i class="glyphicon glyphicon-chevron-left" style="color:#da3434"></i></a>{{/if}}Pagina: {{currentPage}} de {{totalPages}}<a class="prev-page" style="cursor:pointer"><i class="glyphicon glyphicon-chevron-right" style="color:#da3434"></i></a></span>
+                <span class="" style="{{#unless next}}margin-right:33px;{{/unless}}margin-left:10px;margin-top:10px;float:right;font-family:'Montserrat';font-weight: 700;font-size: 18px;line-height:15px;font-style: normal; color:white;">
+                    {{#if prev}}<a class="prev-page" style="cursor:pointer"><i class="glyphicon glyphicon-chevron-left" style="margin-right:10px;color:#da3434"></i></a>{{/if}}
+                        Pagina: {{currentPage}} de {{totalPages}}
+                    {{#if next}}<a class="next-page" style="cursor:pointer"><i class="glyphicon glyphicon-chevron-right" style="margin-right:10px;color:#da3434"></i></a>{{/if}}
+                </span>
             </div>
 
                 {{#each actividades}}
