--- a/imports/ui/users/templatesImages/teconmedialunas.html
+++ b/imports/ui/users/templatesImages/teconmedialunas.html
@@ -5,7 +5,7 @@
 
         <div class="{{#if esPar}}col-md-7 par-left{{else}} col-md-5 impar-left{{/if}}" >
     {{#if esPar}}
-        <div style="background-image:url('teconmedialunas1.png');transform: scaleX(-1);background-size:contain;background-repeat:no-repeat;width:100%;height:100%"></div>
+        <div style="background-image:url('teconmedialunas.png');transform: scaleX(-1);background-size:contain;background-repeat:no-repeat;width:100%;height:100%"></div>
     {{else}}
         {{>textImpar}}
     {{/if}}
@@ -14,7 +14,7 @@
         {{#if esPar}}
             {{>textPar}}
         {{else}}
-            <div style="background-image:url('teconmedialunas1.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100%"></div>
+            <div style="background-image:url('teconmedialunas.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100%"></div>
         {{/if}}
     </div>
     {{else}}
@@ -28,7 +28,7 @@
 
         </div>
         <div class="col-sm-10 col-sm-offset-1" style="height:650px;padding:0;padding-top:50px;" >
-            <div style="background-image:url('teconmedialunas1.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100%"></div>
+            <div style="background-image:url('teconmedialunas.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100%"></div>
 
         </div>
     {{/if}}
