--- a/imports/ui/admin/libros/librosAdmin.html
+++ b/imports/ui/admin/libros/librosAdmin.html
@@ -56,7 +56,7 @@
                                                                 <button class="btn btn-default btn-remove">
                                                                     <i class="fa fa-trash fa-fw"></i>
                                                                 </button>
-                                                                <button class="btn btn-default" id="edit-actividad">
+                                                                <button class="btn btn-default" id="edit-libro">
                                                                     <i class="fa fa-pencil fa-fw"></i>
                                                                 </button>
                                                             </div>
