added link to activity

--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -209,7 +209,7 @@
                     ARCHIVO
                 </div>
                 <div class="dropdown-menu" style="background-color:#171f2a;" aria-labelledby="dropdownMenuButton">
-                    <a class="horizontal-menu-item-2 dropdown-item"  href="#">Libros leidos</a>
+                    <a class="horizontal-menu-item-2 dropdown-item"  href="/archivo/libros">Libros leidos</a>
                     <a class="horizontal-menu-item-2 dropdown-item"  href="/archivo/actividades">Actividades</a>
                     <a class="horizontal-menu-item-2 dropdown-item"  href="#">Prensa</a>
                     <!--<a class="dropdown-item" href="#">Something else here</a>-->
