--- a/imports/ui/users/archivo/actividadesArchivo.html
+++ b/imports/ui/users/archivo/actividadesArchivo.html
@@ -31,17 +31,27 @@
                 <button class="btn btn-primary" style="margin-left:5px;height:35px;padding:4px 12px;background-color:#313a77;border-color:#313a77"><i class="glyphicon glyphicon-search" style="margin-right:3px"></i>Buscar</button>
                 <span class="" style="{{#unless next}}margin-right:33px;{{/unless}}margin-left:10px;margin-top:10px;float:right;font-family:'Montserrat';font-weight: 700;font-size: 18px;line-height:15px;font-style: normal; color:white;">
                     {{#if prev}}<a class="prev-page" style="cursor:pointer"><i class="glyphicon glyphicon-chevron-left" style="margin-right:10px;color:#da3434"></i></a>{{/if}}
-                        Pagina: {{currentPage}} de {{totalPages}}
+                        Página: {{currentPage}} de {{totalPages}}
                     {{#if next}}<a class="next-page" style="cursor:pointer"><i class="glyphicon glyphicon-chevron-right" style="margin-right:10px;color:#da3434"></i></a>{{/if}}
                 </span>
             </div>
 
                 {{#each actividades}}
-                <div style="margin-top:20px;padding:20px;height:100px;width:100%;background-color:#1d2e39;">
-                    <h3 class="actividad-nombre" style="font-size:18px;">{{nombre}}</h3>
-                    <span style="font-family:'Montserrat';font-weight: 700;font-size: 14px;line-height:15px;font-style: normal; color:white;">{{fechaInicio}}{{#if fechaFin}} - {{fechaFin}}{{/if}}</span>
-                    <!--<span style="font-family:'Open Sans', sans-serif;font-weight: 700;font-size: 12px;line-height:15px;font-style: normal; color:white;">{{texto}}</span>-->
-                </div>
+                   <div class="row">
+                       <div class="col-md-11" style="padding-right:0px">
+                           <div style="margin-top:20px;padding:20px;height:100px;background-color:#1d2e39;">
+                               <h3 class="actividad-nombre" style="font-size:18px;">{{nombre}}</h3>
+                               <span style="font-family:'Montserrat';font-weight: 700;font-size: 14px;line-height:15px;font-style: normal; color:white;">{{fechaInicio}}{{#if fechaFin}} - {{fechaFin}}{{/if}}</span>
+                               <!--<span style="font-family:'Open Sans', sans-serif;font-weight: 700;font-size: 12px;line-height:15px;font-style: normal; color:white;">{{texto}}</span>-->
+                           </div>
+                       </div>
+                       <div class="col-md-1" style="padding-left:0px;">
+                           <div style="margin-top:20px;padding-top:20px;height:100px;background-color:#1d2e39;">
+                                <a href="/actividadInfo/{{_id}}" style="text-decoration: none"><i class="fa-arrow-right" style="color:white;font-size:30px"></i></a>
+                           </div>
+                       </div>
+                   </div>
+
             {{/each}}
         </div>
     </div>
